# bignum

./: .gitignore  CMakeLists.txt  bignum  bignum.cpp  bignum.hpp  calculate_pi  calculate_pi.cpp  main  main.cpp
BigNum/: CMakeLists.txt  bignum.cpp  bignum.hpp
test/: test.cpp
